--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
+    "experimentalDecorators": true,
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": [
